# green-hill-app

./: .dockerignore  .env.example  .env.multi_agent  .gitignore  .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  CLEAN_ARCHITECTURE.md  CLOUD_DEPLOYMENT.md  MULTI_AGENT_GUIDE.md  ORG_SETUP.md  README.md  app.py  digital_root.py  document_store.py  ghc_persistent_vector_store.py  ghc_twin.py  langgraph.json  langgraph_simple.json  main.py  main_fixed.py  models.py  precompute_vector_store.py  requirements.txt  sample_docs.json  simple_main.py  simple_web_app.py  simple_web_test.py  simple_working_main.py  streamlit_app.py  test_continuous.py  test_ghc_twin.py  test_ingest_canonical_docs.py  test_results_20250813_232954.json
.github/workflows/: add-to-org-project.yml
.langgraph_api/: .env.example  .langgraph_retry_counter.pckl  ORG_SETUP.md  README.md  document_store.py  langgraph.json  main.py  precompute_vector_store.py  pyproject.toml  requirements.txt  test_clean_architecture.py  test_continuous.py
.langgraph_api/app/: __init__.py  api.py
.langgraph_api/data/investor_materials/investors/Pascal Picano/: RE CANNAPHARM funding round.msg
app/: __init__.py  agent_ingest.py  agents.py  api.py  document_store.py  ghc_twin.py  ingest.py  main.py  models.py
data/compliance/: aemps_assessment_application.md  qms_playbook.md  sop_index.md
data/conceptual_design/: integration_points.md  (+3 more)
requirements/: README.md
scripts/: smoke_test.py
tests/: test_cli_digital_root.py  test_ingest_cli.py
web/: index.html
(+31 files in other folders)
